--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698354337-senior-product-manager-monetisation-m-f-d-'>Omio Senior Product Manager, Monetisation (m / f / d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/industrious/jobs/1907608'>Job Application for Associate Product Manager at Industrious</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nGPXmMw5'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://producthire.net/job/senior-product-designer-11/'>Senior Product Designer | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://www.qreer.com/jobs/view/8124/junior-product-designer-m-f'>Junior Product Designer (M/F) Job in Zurich, Switzerland</a></h5> 
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -66,7 +82,7 @@
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gloo/2ac1e4fb-5021-4f92-adde-10b91a05f586'>Gloo - Associate Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/2ac1e4fb-5021-4f92-adde-10b91a05f586'>Gloo - Associate Product Owner</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -78,7 +94,7 @@
 <p><span class="badge badge-light">St. Louis, Missouri</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qBn9VfwM&k=Job&j=ouBcbfwc&__jvst=Employee&__jvsd=sspIUgwe&__jvsc=Twitter&bid=n0TSmMwo'>BlueJeans Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qBn9VfwM&k=Job&j=ouBcbfwc&__jvst=Employee&__jvsd=sspIUgwe&__jvsc=Twitter&bid=n0TSmMwo'>BlueJeans Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -130,7 +146,7 @@
 <p><span class="badge badge-light">United States  San Jose, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://xneelo.recruitee.com/o/product-manager'>
+<h5><a href='https://xneelo.recruitee.com/o/product-manager'>
       Product Manager - xneelo
     </a></h5> 
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
@@ -150,7 +166,7 @@
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24961-Product-Designer'>
+<h5><a href='https://dribbble.com/jobs/24961-Product-Designer'>
       Product Designer at Input Logic - Nanaimo, BC, Canada - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
@@ -256,7 +272,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hellooffice/f4551972-7b47-4da2-a86c-c14bd6e4bb2f'>HelloOffice - Senior Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hellooffice/f4551972-7b47-4da2-a86c-c14bd6e4bb2f'>HelloOffice - Senior Product Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -264,7 +280,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698320437-sr-product-manager-digital-products-merchant-services'>Visa Sr. Product Manager, Digital Products, Merchant Services | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698320437-sr-product-manager-digital-products-merchant-services'>Visa Sr. Product Manager, Digital Products, Merchant Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Foster City, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -298,11 +314,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/breathelife/jobs/4497907002'>Job Application for Product Owner at Breathe Life</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/breathelife/jobs/4497907002'>Job Application for Product Owner at Breathe Life</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://houzy.join.com/jobs/457158-digital-product-designer-80-100'>Job @ Houzy (Z?rich): Digital Product Designer 80-... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://houzy.join.com/jobs/457158-digital-product-designer-80-100'>Job @ Houzy (Z?rich): Digital Product Designer 80-... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -357,7 +373,7 @@ Pushing the boundaries of what's possible in advanced machine learning?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia  Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qahaVfwg&k=Job&j=oH31afwF&__jvst=Employee&__jvsd=sTrGdgwY&__jvsc=Twitter&bid=nEYRlMw5'>Santander Consumer USA Careers - Digital Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qahaVfwg&k=Job&j=oH31afwF&__jvst=Employee&__jvsd=sTrGdgwY&__jvsc=Twitter&bid=nEYRlMw5'>Santander Consumer USA Careers - Digital Product Manager</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -394,7 +410,7 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4497581002'>Job Application for (Senior) Product Owner Digital Banking  (f/m/div) at solarisBank AG at solarisBank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4497581002'>Job Application for (Senior) Product Owner Digital Banking  (f/m/div) at solarisBank AG at solarisBank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -420,7 +436,7 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://producthire.net/job/product-manager-35/'>Product Manager | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/product-manager-35/'>Product Manager | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -434,7 +450,7 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://ausdta.recruiterbox.com/jobs/fk03dvi/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ausdta.recruiterbox.com/jobs/fk03dvi/'>
     Product Owner - EL 2 at Digital Transformation Agency
 </a></h5> 
 <p><span class="badge badge-light">Canberra</span></p>
@@ -444,27 +460,11 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orvMafwC&__jvst=Employee+Referral&__jvsd=s6u3Zgwn&__jvsc=Twitter&bid=nKPIlMwT'>ServiceNow Careers - Principal Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orvMafwC&__jvst=Employee+Referral&__jvsd=s6u3Zgwn&__jvsc=Twitter&bid=nKPIlMwT'>ServiceNow Careers - Principal Product Manager</a></h5> 
 <p><span class="badge badge-light">Hyderabad  Hyderabad, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://headcount.join.com/jobs/463073-product-manager'>Job @ headcount (Geneva): Product Manager  | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobswipe.co/jobs/5db69cd51a2b9f5f372a18ef'>SAR Technologies is hiring a Product manager. | JobSwipe</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/viabill/8b7c1dfc-53a5-4c45-a257-7d9b8bbdcef2'>ViaBill - Product Manager Assistant</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://zattoo.join.com/jobs/462303-product-designer'>Job @ Zattoo (Berlin): Product Designer | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/vena/jobs/4497145002'>Job Application for Product Manager  at Vena Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
