--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -130,7 +130,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://coya.join.com/jobs/452668-site-reliability-engineer-sre-devops-engineer-m-w'>Job @ Coya (Berlin): Site Reliability Engineer (SR... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coya.join.com/jobs/452668-site-reliability-engineer-sre-devops-engineer-m-w'>Job @ Coya (Berlin): Site Reliability Engineer (SR... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -184,7 +184,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Portland, ORPortland, OR</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -225,7 +225,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ipsy/job/os3nbfwN'>Ipsy Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ipsy/job/os3nbfwN'>Ipsy Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  San Mateo</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -338,7 +338,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://archilogic.join.com/jobs/433611-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archilogic.join.com/jobs/433611-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -360,7 +360,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oMbuafwl&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nCgecMwz'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oMbuafwl&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nCgecMwz'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -428,7 +428,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Bengaluru  Bangalore Jakarta</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
